Retirando a borda do iframe

--- a/twiter.html
+++ b/twiter.html
@@ -11,6 +11,7 @@
             padding: 0;
         }
 
+        
         img {
             width: 100vh;
         }
@@ -26,6 +27,8 @@
     </style>    
 </head>
 <body>
-    
+    <!--<img src="imagens/tela-twitter.jpg" alt="">
+    <a href="www.instagram.com.br" target="_blank">ACESSE</a>-->
+
 </body>
 </html>
